--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "fastify": "^3.21.5",
+    "fastify-cookie": "^5.3.1",
     "fastify-static": "^4.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.2"
   }
 }
