--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:server": "nodemon ./src/index.js",
+    "start:ui": "serve ui",
+    "certify": "caddy run"
   },
   "author": "",
   "license": "ISC",
@@ -14,8 +17,10 @@
     "dotenv": "^10.0.0",
     "fastify": "^3.21.5",
     "fastify-cookie": "^5.3.1",
+    "fastify-cors": "^6.0.2",
     "fastify-static": "^4.2.3",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.1.2"
+    "mongodb": "^4.1.2",
+    "serve": "^12.0.1"
   }
 }
