--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fastify-static": "^4.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.2",
+    "nodemailer": "^6.7.0",
     "serve": "^12.0.1"
   }
 }
