--- a/api/package.json
+++ b/api/package.json
@@ -2,13 +2,11 @@
   "name": "node-auth",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:server": "nodemon ./src/index.js",
-    "start:ui": "serve ui",
-    "certify": "caddy run"
+    "start": "nodemon ./src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +19,6 @@
     "fastify-static": "^4.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.2",
-    "nodemailer": "^6.7.0",
-    "serve": "^12.0.1"
+    "nodemailer": "^6.7.0"
   }
 }
