--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-fetch": "^3.1.4",
     "fastify": "^3.22.1",
     "fastify-static": "^4.4.2"
   }
